# Satyr-Scheduler

./: LICENSE  README.md  build.sh  clean.sh  requirements.txt
SatyrScheduler/: LICENSE  README.md  pyproject.toml  setup.cfg
SatyrScheduler/src/SatyrScheduler/: __init__.py
SatyrScheduler/src/SatyrScheduler.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
SatyrScheduler/src/SatyrScheduler/CustomTime/: CustomTime.py
SatyrScheduler/src/SatyrScheduler/GetData/: GetData.py  SketchData.py  SketchElement.py  SongElement.py  test
SatyrScheduler/src/SatyrScheduler/Schedule/: Schedule.py
docs/: Documentation.md
docs/example/simple/: Main.py  room.csv  sketch.csv  song.csv
docs/src/resources/: sequency.plantuml
