[metadata]
name= SatyrScheduler
version = 0.0.1
author= nickgismokato
author_email= nickvillumlaursen@gmail.com
url= https://github.com/nickgismokato/Satyr-scheduler
#packages= ['OAuth', 'Report']
license= MIT License
description= A small package to create a schedule for Satyr
long_description= A small package which can take data from .csv files and then create a recommended schedule for Satyr revyer.
keywords= python, satyr, package
classifiers=
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: End Users/Desktop
    Intended Audience :: Other Audience
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
packages = find:
include_package_data = True
python_requires = >= 3.10
package_dir =
    =src

[options.packages.find]
where=src